--- a/templates/tem.html
+++ b/templates/tem.html
@@ -5,9 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-multiselect.css') }}">
  	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/datatables.min.css') }}"/>
     <title></title>
 </head>
 <body>
@@ -17,8 +16,8 @@
 	<script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/popper.min.js')}}"></script>
 	<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/datatables.min.js') }}"></script>
-	{% block js %}{% endblock %}
+    <script src="{{ url_for('static', filename='js/jquery-ui.min.js') }}"></script>
+    {% block js %}{% endblock %}
 </body>
 </html>
 
